<resources>
    <string name="app_name">onlineStudy</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login_success">login success</string>
    <string name="login">登录</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码?</string>
    <string name="go">登录</string>
    <string name="repeat_password"></string>
    <string name="next">NEXT</string>
    <string name="register">注册</string>
    <string name="phone">电话号码</string>
</resources>
